# super-mario-bros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  character.cpp  character.h  game.cpp  game.h  ltexture.cpp  ltexture.h  main.cpp  tiles.cpp  tiles.h
.github/workflows/: build.yml
assets/levels/: level.csv
include/: camera.h  character.h  constants.h  controller.h  game.h  geometry.h  structures.h  world.h
include/collisions/: collisions.h  get_adjacent_tiles.h
include/entities/: character.h  entity.h
include/level/: level.h  tile.h  tileset.h
include/physics/: bodies.h  physics.h  structs.h
include/physics/collisions/: collisions.h  get_adjacent_tiles.h  get_collisions.h  math.h  solve_collisions.h  structs.h
include/render/: ltexture.h  window.h
include/spritesheet/: sprite.h  spritesheet.h
levels/: level.tmx  tileset.tsx
src/: CMakeLists.txt  camera.cpp  camera.h  character.cpp  character.h  collisions.cpp  collisions.h  constants.h  controller.cpp  game.cpp  game.h  ltexture.cpp  ltexture.h  structs.h  structures.cpp  world.cpp
src/collisions/: collisions.cpp  collisions.h  get_adjacent_tiles.cpp  get_collisions.cpp  math.cpp  math.h  structs.h
src/entities/: character.cpp  entity.cpp
src/level/: csv.cpp  csv.h  level.cpp  level.h  tile.cpp  tile.h  tiles.cpp  tiles.h  tileset.cpp  tileset.h
src/physics/: bodies.cpp  physics.cpp  physics.h  rigidbody.cpp  rigidbody.h
src/physics/collisions/: collisions.cpp  collisions.h  get_adjacent_tiles.cpp  get_adjacent_tiles.h  get_collisions.cpp  math.cpp  math.h  solve_collisions.cpp  solve_collisions.h  structs.h
src/render/: ltexture.cpp  ltexture.h  window.cpp  window.h
src/spritesheet/: sprite.cpp  spritesheet.cpp
